<resources>
    <string name="app_name">APPSobreMin</string>
    <string name="nome">Victor Carreira</string>
    <string name="yellow_star">Estrela Amarela</string>
    <string name="bio">Oi, meu nome é Victor.
\n\nI love fish.
\n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
\nFun fact is that I have several aquariums and also a river.
\n\nI like eating fish, too. Grilled fish. Smoked fish. Poached fish.
\nAnd sometimes I even go fishing.
\nAnd even less sometimes, I actually catch something.
\n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
\n\nI\'ll be happy to teach you how to make your own aquarium.
\nYou should ask someone else about fishing, though.\n\n
    </string>
    <string name="image_avatar">"Avatar "</string>
    <string name="qual_seu_nome">Qual o seu nome?</string>
    <string name="botao_feito">Feito</string>
    <string name="feito">Feito</string>
</resources>