<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="MeuNome"
            type = "com.example.appsobremin.MeuNome"/>
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_nome"
        style="@style/StiloTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={MeuNome.nome}" />
        <!--essa referencia text aqui foi trocada pelo data-->
        android:textAlignment="center" />

    <EditText
        android:id="@+id/nick_name"
        style="@style/StiloTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/qual_seu_nome"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/feito_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/feito" />

    <TextView
        android:id="@+id/nick_name_texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@={MeuNome.nickName}"/>

    <ImageView
        android:id="@+id/estrela_amarela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="ImageContrastCheck" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding">

            <TextView
                android:id="@+id/bio_texto"
                style="@style/StiloTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/bio" />

            <ImageView
                android:id="@+id/imageAvatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin_end"
                android:contentDescription="@string/image_avatar"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>